lab1/Test/L1-A-12-63.output
Error Type A at Line 4
Error Type B at Line 8
Error Type B at Line 26
Error Type B at Line 32
Error Type B at Line 39
Error Type A at Line 41
