lab1/Test/L1-A-12-63.cmm
float wK2Sp1_i [ 716890204 ] , KQWhagYjO7FLWzy_8 

;
int ~;
struct apifMogGatiOfTIjaA ;
int YMjdbD7GavdgJMaQ ( ) {
  struct {
  }, t5RDzw4FKyIgq = _S9Z1Sra4yQuD = LBh5iCFl && MiS6M9hhrF5Vi77 
    <= bWm4XQ00gbq2xFftIcc - Uxic / - ( Sq3uasiqNBaFzY 
    || DrGHuA_ != lMJYf_EJfl_OZj2CEnJF * UmJ ( Z6fLZjOALEX 
    , NOnFyxcke6YScOKBNkx2 = _zcmKdc1iHXqgM = EmSYt0tH86M 
    || YJ1wBy_C3 < tSAt72 [ VUu5Sz || OaW4ELaS6GFcd7PX 
    / ! ( GTs6OOY8 = ZbXmJHZb >= XoNKUJLg8Rkrow * Lh [ 
    sUEzTVyPhoTfbJG_HN = kQX = bc1imv > D == ZDWAIMrQb9mar 
    ] ) * 1841959795 . fhHXyVOSp + gnkjPcdu7vVjv5 / - 
    870879923.1264352248 . JWcsUiQ_uBiLf4uo ] ) . v6Qbh 
    + ! SLSCrlzEXDQ ( ) ) ;
}
struct tSyNVFSWJdy4UHXU {
};
struct mkIn ;
struct KRKXpu6aXsebKD9jk5 lPXFe6d 
;
int ;
int 
int igTQT9dXvwjRDI ( int SwvxvjBelX3lnByaulC_ , int 
  daAKn_3ZCGCkb_ ) {
  xbKz3Bd9V53h5HRptCK ;
  if ( mldq4ZRI_gpvZQGC )   while ( p7Pa0PBVFumhnvtQx9B 
    )   NuHw ;

else   if ( Ajp1VT5cyefShraS   if ( TY2F )   if ( 
    mvDOcuHn5yg2y2QRw ) {
  }else   return zDVMA ;




  ;
}
@